<resources>
    <string name="app_name">EDCR</string>
    <string name="oshni"> \u00a9 OSHNI SOFTWARE Ltd. 2018</string>
    <string name="morning">Morning</string>
    <string name="evening">Evening</string>

    <string name="lb_product">Product</string>
    <string name="lb_doctors">Doctors</string>

    <string name="title_activity_pwds_tab">P W D S</string>
    <string name="title_activity_gwds_tab">G W D S</string>
    <string name="title_activity_tour_plan_tab">TOUR PLAN</string>
    <string name="title_activity_work_plan">WORK PLAN</string>
    <string name="title_activity_dss">Day Sample Summary</string>
    <string name="title_activity_ss">Sample Statement</string>
    <string name="title_activity_today">Today</string>
    <string name="title_activity_dvr">D V R</string>
    <string name="title_activity_calendar">Calender for %1$s</string>
    <string name="title_color_info_tdpg">Color Info for %1$s Status</string>
    <string name="title_color_info_dvr">Color Info for DVR Status</string>
    <string name="title_color_info_work_plan">Color Info for Work Plan Status</string>
    <string name="title_color_info_dcr">Color Info for DCR Status</string>
    <string name="title_color_info_for_dcr">Color Info for DCR</string>
    <string name="title_activity_bill_statement">Bill Statement</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="btn_save_next">Save \u0026 Next</string>
    <string name="zoom_transition">300</string>

    <string name="title_report_fragment_doctor_list">Doctor Vs DCR</string>
    <string name="title_report_fragment_market_dvr">Doctor without DCR</string>
    <string name="title_report_fragment_dvr_summary">DVR Summary</string>
    <string name="title_report_fragment_uncovered_doctor">Uncovered Doctor List</string>
    <string name="title_report_fragment_doctor_coverage">Doctor Coverage</string>
    <string name="title_report_fragment_sample_statement">Sample Statement</string>
    <string name="title_report_fragment_dcr_summary">DCR Summary</string>
    <string name="title_report_fragment_doctor_wise_item">Doctor wise Item</string>
    <string name="title_report_fragment_accompany">Accompany Info</string>
    <string name="title_report_fragment_psc">Physical Stock Check</string>
    <string name="title_report_fragment_pwds">Report P W D S</string>
    <string name="title_report_fragment_work_plan">Market Competitors</string>

    <string name="title_tour_place">Tour Places</string>
    <string name="add_tour_place">Add\nPlace</string>
    <string name="tour_plan">Tour plan</string>
    <string name="location_wise_doctors">Location List of %1$s</string>
    <string name="search">Search here...</string>
    <string name="search_psc">Search product</string>
    <string name="search_dcr_sum">Search date</string>
    <string name="add_accompany_hint">Add</string>
    <string name="search_1">search</string>
    <string name="add">Add</string>
    <string name="hint_add_accompany">Enter Accompany ID and Click Add</string>
    <string name="hint_add__another_accompany">Enter another Accompany ID and Click Add</string>
    <string name="hint_add_place">if location not found add here</string>
    <string name="hint_set_place">Select %1$s location from below list.\nClick &#8213; to reset location</string>
    <string name="searching">Searching</string>
    <string name="android_name">Android Name</string>
    <string name="android_version">Android Version</string>
    <string name="prev">Prev.</string>
    <string name="ok">Ok</string>
    <string name="next">Next</string>
    <string name="absent">ABSENT</string>
    <string name="allocated_colon">Allocated: </string>
    <string name="save">Save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="edcr_login">Login</string>
    <string name="user_id">Employee ID</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="download">Download</string>
    <string name="upload">Upload</string>
    <string name="sync_basic_title">sync promotional items, doctors and others</string>
    <string name="delete_all_title">clear EDCR app data saved in mobile!!</string>
    <string name="sync_other_title">sync DA and TA Rate:</string>
    <string name="sync_transaction_title">sync TP, DVR, PWDS and GWDS for</string>
    <string name="home">Home</string>
    <string name="done">Done</string>
    <string name="sync">Sync</string>
    <string name="total_no_sample">Total no of sample</string>
    <string name="total_no_product">Total no of product</string>
    <string name="rcv_qty">Rcv qty</string>
    <string name="plan_doc">Plan doc</string>
    <string name="contact_address">Contact address </string>
    <string name="morning_location_title">Morning place:</string>
    <string name="morning_location_set">tap here to set place</string>
    <string name="evening_location_title">Evening place:</string>
    <string name="evening_location_set">tap here to set place</string>
    <string name="tp_list">TP list for %1$s</string>
    <string name="menu_tp_list">TP List</string>
    <string name="menu_pwds_list">PWDS List</string>
    <string name="menu_gwds_list">GWDS List</string>
    <string name="location_list">Location</string>
    <string name="next_month">Current</string>
    <string name="title_draft">Draft</string>
    <string name="others_tp_list">Others TP List </string>
    <string name="copy_from">Copy From </string>
    <string name="change_tp">Change TP</string>
    <string name="tp_of">TP of</string>

    <string name="leave_cause">Cause of leave</string>
    <string name="meeting_place">Meeting place</string>
    <string name="dcr_list">Monthly DCR List</string>
    <string name="title_activity_add_sample_item">Add Sample</string>
    <string name="new_doctor">New Doctor</string>
    <string name="existing_doctor">Existing Doctor</string>
    <string name="intern_doctor">Intern Doctor</string>
    <string name="new_dcr_other">Others</string>
    <string name="more">More...</string>
    <string name="dcr_summary">DCR Summary</string>
    <string name="new_dcr_title">New DCR</string>
    <string name="send_morning_dcr">Send Morning DCR</string>
    <string name="send_evening_dcr">Send Evening DCR</string>
    <string name="add_accompany">Add Accompany</string>
    <string name="settings">Settings</string>
    <string name="internet_not_available">Internet connection is not available</string>
    <string name="check_internet">Please check your internet connection</string>
    <string name="change_password_underline"><u>Change Password</u></string>
    <string name="change_password">Change Password</string>
    <string name="doctor_location">Doctor Info for %1$s</string>
    <string name="alert_dvr_zero">No. of DOT in %1$s can not be zero on date %2$d!!</string>
    <string name="alert_dcr_dot">DCR DOT not changeable!!</string>

    <string name="search_hint_accompany">search with name</string>


    <string name="product_related">Product Related</string>
    <string name="gift_related">Gift Related</string>
    <string name="survey">Survey</string>
    <string name="marketing_strategy">Marketing Strategy</string>
    <string name="employee_benefit">Employee Benefit</string>
    <string name="permission_denied">Permission Denied!!</string>
    <string name="permission_need">Permission Need!!</string>
    <string name="permission_deny_msg">To send dcr you have to grant the location permission./nTo grant permission go to App Info of EDCR App from settings menu and click permissions finally turn on location. </string>
    <string name="channel_name">EDCR2020</string>
    <string name="channel_description">Channel for EDCR</string>

    <string name="digits">1236547890qwertyuioplkjhgfdsazxcvbnm.,QWERTYUIOPLKJHGFDSAZXCVBNM ()[]{}+-*</string>
    <string name="digits_string">qwertyuioplkjhgfdsazxcvbnm. QWERTYUIOPLKJHGFDSAZXCVBNM</string>
    <string-array name="intern">
        <item>MED</item>
        <item>GYN</item>
        <item>SURG</item>
        <item>PEAD</item>
        <item>CARD</item>
        <item>DMF</item>
        <item>DUTY</item>
        <item>OTHER</item>
    </string-array>

</resources>
