<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="1dp"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_left_right">

            <bd.com.aristo.edcr.utils.ui.texts.ATextView
                style="@style/TextTitle"
                android:textStyle="bold"
                android:text="@string/total_no_product"
                android:id="@+id/sampleTV"
                android:gravity="left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10ssp"/>

            <bd.com.aristo.edcr.utils.ui.texts.ATextView
                android:textStyle="bold"
                android:textColor="@color/red"
                android:text="34"
                android:id="@+id/totalTV"
                android:gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_6sdp"
                android:textSize="@dimen/_10ssp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RadioGroup
            android:id="@+id/rgMorEve"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightGray"
            android:checkedButton="@+id/morning"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/morning"
                style="@style/RadioMorningEvening"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/radio_button_bg"
                android:text="@string/morning" />

            <RadioButton
                android:id="@+id/evening"
                style="@style/RadioMorningEvening"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/radio_button_bg"
                android:text="@string/evening" />
        </RadioGroup>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/dssList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/rgMorEve"/>
        <bd.com.aristo.edcr.utils.ui.texts.ATextView
            android:id="@+id/btnDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:layout_margin="@dimen/_5sdp"
            android:text="@string/done"
            android:layout_alignParentEnd="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:layout_alignParentBottom="true"
            android:background="@color/color2"/>
    </RelativeLayout>
</LinearLayout>
