<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="@dimen/_5sdp"
    card_view:cardPreventCornerOverlap="false"
    card_view:cardUseCompatPadding="true"
    android:layout_margin="@dimen/_2sdp">
<LinearLayout
    android:id="@+id/llMain"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <bd.com.aristo.edcr.utils.ui.texts.ATextView
            android:textStyle="bold"
            android:id="@+id/txtID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_2sdp"
            android:textSize="12sp"
            android:text="ID"
            android:textColor="@color/color3"/>
        <bd.com.aristo.edcr.utils.ui.texts.ATextView
            android:textStyle="bold"
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_2sdp"
            android:textSize="14sp"
            android:textColor="@color/color2"
            android:text="Name"/>
        <bd.com.aristo.edcr.utils.ui.texts.ATextView
            android:textStyle="bold"
            android:id="@+id/txtDegree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_2sdp"
            android:textSize="12sp"
            android:text="Degree"
            android:textColor="@color/color3"/>
        <bd.com.aristo.edcr.utils.ui.texts.ATextView
            android:textStyle="bold"
            android:id="@+id/txtSpecial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_2sdp"
            android:textSize="12sp"
            android:text="Speciality"
            android:textColor="@color/color2"/>
        <bd.com.aristo.edcr.utils.ui.texts.ATextView
            android:textStyle="bold"
            android:id="@+id/txtAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_2sdp"
            android:textSize="12sp"
            android:text="Address"
            android:textColor="@color/color4"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginStart="@dimen/_2sdp">
        <LinearLayout
            android:id="@+id/llMorning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <bd.com.aristo.edcr.utils.ui.texts.ATextView
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/morning_location_title"
                android:padding="@dimen/_1sdp"
                android:textColor="@color/md_blue_500"
                android:textSize="12sp"/>
            <bd.com.aristo.edcr.utils.ui.texts.ATextView
                android:textStyle="bold"
                android:id="@+id/txtMLoc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/morning_location_set"
                android:padding="@dimen/_1sdp"
                android:textColor="@color/md_blue_800"
                android:textSize="16sp"
                android:layout_marginBottom="@dimen/_5sdp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llEvening"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <bd.com.aristo.edcr.utils.ui.texts.ATextView
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_1sdp"
            android:textColor="@color/color4"
            android:text="@string/evening_location_title"
            android:textSize="12sp"/>
        <bd.com.aristo.edcr.utils.ui.texts.ATextView
            android:textStyle="bold"
            android:id="@+id/txtELoc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_1sdp"
            android:hint="@string/evening_location_set"
            android:textColor="@color/color4"
            android:textSize="16sp"/>
    </LinearLayout>
    </LinearLayout>


</LinearLayout>
</androidx.cardview.widget.CardView>