<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bd.com.aristo.edcr.LoginActivity">

    <TextView
        android:id="@+id/connectionInfoTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/md_red_500"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="15sp"
        android:text="@string/internet_not_available"
        android:visibility="gone"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/connectionInfoTV">

        <RelativeLayout
            android:id="@+id/activityMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="10dp"
                android:layout_centerInParent="true"
                app:cardCornerRadius="7dp"
                app:cardElevation="22dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/_5sdp">

                    <ImageView
                        android:id="@+id/ivLogo"
                        android:layout_width="@dimen/_150sdp"
                        android:layout_height="@dimen/_80sdp"
                        android:layout_gravity="center"
                        android:src="@drawable/mpo_cover" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_40sdp"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="@color/gray"
                            android:hint="@string/user_id"
                            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editTextUserId"
                                style="@style/TextStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="20dp"
                                android:layout_marginRight="20dp"
                                android:background="@drawable/input_border_bottom"
                                android:cursorVisible="true"
                                android:gravity="center|left|bottom"
                                android:inputType="text"
                                android:maxLength="50"
                                android:paddingBottom="10dp"
                                android:textColor="@color/black_effective"
                                android:textSize="18sp" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:hint="@string/password"
                            android:textColorHint="@color/gray"
                            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                            app:passwordToggleEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editTextPassword"
                                style="@style/TextStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="20dp"
                                android:layout_marginRight="20dp"
                                android:layout_marginTop="30dp"
                                android:background="@drawable/input_border_bottom"
                                android:cursorVisible="true"
                                android:gravity="center|left|bottom"
                                android:inputType="textPassword"
                                android:maxLength="50"
                                android:paddingBottom="@dimen/_10sdp"
                                android:textColor="@color/black_effective"
                                android:textSize="18sp" />

                        </com.google.android.material.textfield.TextInputLayout>


                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/checkBoxRememberMe"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/remember_me"

                            android:layout_marginTop="@dimen/_10sdp"
                            android:layout_marginBottom="@dimen/_6sdp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"/>

                        <Button
                            android:id="@+id/buttonLogin"
                            style="@style/Button.Primary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginRight="@dimen/_10sdp"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:layout_marginBottom="@dimen/_5sdp"
                            android:padding="10dp"
                            android:text="@string/login"
                            android:textSize="18sp"
                            />

                    </LinearLayout>
                    <TextView
                        android:id="@+id/txtVersion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_2sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:textColor="@color/color2"
                        android:gravity="center"
                        android:textSize="14sp"
                        android:text="Version 1.0"
                        android:visibility="visible"
                        android:textStyle="bold"/>

                </LinearLayout>


            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </FrameLayout>

    <TextView
        android:id="@+id/vInfoTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="@dimen/_6sdp"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="12sp"
        android:text="@string/oshni"
        android:visibility="visible"/>

</RelativeLayout>
